<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Juego Tének</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Juego Tenek</string>
    <string name="jugar">Jugar</string>
    <string name="reanudar">Reanudar</string>
    <string name="creditos">Creditos</string>
    <string name="descripcion">descripcion</string>
	<string name="titulo">Aprendiendo Tének</string>
	<string name="instruccionesgenerales">Selecciona el nivel que deseas jugar</string>
	<string name="vivis">Viviana Méndez García </string>
	<string name="peter">Pedro Jiménez Ramírez</string>
	<string name="micke">Miguel Ángel Meléndez Ramírez </string>
	<string name="nando">Fernando Manuel Torres Martínez</string>
	<string name="kevin">Kevin Omar Domínguez Vargas </string>
	<string name="copyright">Juego Tének Copyright Oficial © UPSLP todos los derechos reservados 2013.</string>
	<string name="nivel1">Nivel 1 </string>
	<string name="nivel2">Nivel 2</string>
	<string name="nivel3">Nivel 3</string>
	<string name="numeros">números</string>
	<string name="animales">animales</string>
	<string name="intrucciones_niveles_ninos">Selecciona la categoria para jugar</string>
	<string name="jugador1">Nombre  1</string>
	<string name="jugador2">Nombre  2</string>
	<string name="jugador3">Nombre  3</string>
	<string name="jugador4">Nombre  4</string>
	<string name="jugador5">Nombre  5</string>
	<string name="jugador6">Nombre  6</string>
	<string name="jugador7">Nombre  7</string>
	<string name="jugador8">Nombre  8</string>
	
	
	<string name="ardilla">Ardilla</string>
	<string name="caballo">Caballo</string>
	<string name="coyote">Coyote</string>
	<string name="gato">Gato</string>
	<string name="mono">Mono</string>
	<string name="perro">Perro</string>
	<string name="vaca">Vaca</string>
	<string name="zorro">Zorro</string>
	<string name="arana">Araña</string>
	<string name="hormiga">Hormiga</string>
	<string name="serpiente">Serpiente</string>
	<string name="conejo">Conejo</string>
	
	<string name="cero">cero</string>
	<string name="uno">uno</string>
	<string name="dos">dos</string>
	<string name="tres">tres</string>
	<string name="cuatro">cuatro</string>
	<string name="cinco">cinco</string>
	<string name="seis">seis</string>
	<string name="siete">siete</string>
	<string name="ocho">ocho</string>
	<string name="nueve">nueve</string>
	
	<string name="puntuacion">Puntuación:</string>
</resources>
