<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_reanudar"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/botonatras"
        android:onClick="lanzarAtras" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="54dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/jugador2"
        android:textColor="@color/blanco" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/textView5"
        android:layout_marginRight="16dp"
        android:text="@string/jugador6"
        android:textColor="@color/blanco" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="79dp"
        android:layout_toRightOf="@+id/button1"
        android:text="@string/jugador1"
        android:textColor="@color/blanco" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_marginLeft="71dp"
        android:layout_toRightOf="@+id/textView3"
        android:text="@string/jugador5"
        android:textColor="@color/blanco" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/jugador3"
        android:textColor="@color/blanco" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginBottom="23dp"
        android:layout_marginLeft="21dp"
        android:layout_toRightOf="@+id/textView5"
        android:text="@string/jugador7"
        android:textColor="@color/blanco" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView7"
        android:layout_below="@+id/textView4"
        android:layout_marginRight="40dp"
        android:text="@string/jugador8"
        android:textColor="@color/blanco" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="61dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/jugador4"
        android:textColor="@color/blanco" />

</RelativeLayout>
