<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_niveles"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="20sp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/layout_btn_txt_cero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_txt_cero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boton_amarillo"
                    android:text="@string/cero" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_btn_txt_uno"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_txt_uno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boton_verde"
                    android:text="@string/uno" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_btn_txt_dos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btn_txt_dos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boton_amarillo"
                    android:text="@string/dos" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/layout_btn_txt_tres"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btn_txt_tres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boton_verde"
                    android:text="@string/tres" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_btn_txt_cuatro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btn_txt_cuatro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boton_amarillo"
                    android:text="@string/cuatro" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_btn_txt_cinco"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btn_txt_cinco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boton_verde"
                    android:text="@string/cinco" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/layout_btn_txt_seis"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btn_txt_seis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boton_amarillo"
                    android:text="@string/seis" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_btn_txt_seite"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btn_txt_seite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boton_verde"
                    android:text="@string/siete" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_btn_txt_ocho"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btn_txt_ocho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boton_amarillo"
                    android:text="@string/ocho" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/layout_btn_txt_nueve"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btn_txt_nueve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boton_verde"
                    android:text="@string/nueve" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5sp"
        android:layout_marginTop="20sp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/layout_img_cero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/img_cero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/numero_0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_img_cinco"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/img_cinco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/numero_5" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_img_tres"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/img_tres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/numero_3" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/layout_img_nueve"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/img_nueve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/numero_9" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_img_dos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/img_dos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/numero_2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_img_cuatro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/img_cuatro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/numero_4" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_img_ocho"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/img_ocho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/numero_8" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/layout_img_siete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/img_siete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/numero_7" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_img_uno"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/img_uno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/numero_1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_img_seis"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/img_seis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/numero_6" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/botonatras"
        android:onClick="lanzarAtras"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="18dp"
        android:layout_toLeftOf="@+id/TextView2"
        android:text="@string/puntuacion"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blanco" />
    
	<!-- Vista para mostrar los puntos -->
    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/linearLayout1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blanco" />

</RelativeLayout>